src/rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "not-applicable"
  replicas: 2
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management # with gui
          ports:
            - name: http # poty for gui
              protocol: TCP
              containerPort: 15672
            - name: amqp # advanced message queue protocol
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq # persisted storage here
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
