src/rabbit/manifests/ingress.yml
# ingress for the rabbitmq ui
# need to be configured in the etc/host

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  labels:
    name: rabbitmq-ingress
spec:
  rules:
  - host: rabbitmq-manager.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rabbitmq
            port: 
              number: 15672
